# rust-ticker-server

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
db/: README.md  flyway.conf
db/sql/: V202307081918__initial.sql  V202307122137__seed_data.sql
src/: coinbase.rs  config.rs  main.rs  model.rs  redis_connection.rs  routes.rs  websocket.rs
src/api/: routes.rs
src/config/: settings.rs
src/graphql/: mod.rs  model.rs
src/services/: binance.rs  coinbase.rs  mod.rs  redis_connection.rs  websocket.rs  ws_message.rs
