[package]
name = "rust-ticker-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
axum = "0.6.18"
serde = { version = "1.0.164", features = ["derive"] }
async-graphql = "5.0.10"
async-graphql-axum = "5.0.10"
dotenv = "0.15.0"
reqwest = "0.11.18"
serde_json = "1.0.97"

[dev-dependencies]
cargo-watch = "8.4.0"
