[package]
name = "rust-ticker-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
axum = "0.6.20"
serde = { version = "1.0.164", features = ["derive"] }
async-graphql = "6.0.11"
async-graphql-axum = "6.0.11"
dotenv = "0.15.0"
reqwest = "0.11.18"
serde_json = "1.0.97"
tungstenite = "0.21.0"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
futures-util = "0.3.28"
redis = { version = "0.24.0", features = ["tokio-native-tls-comp"] }
once_cell = "1.18.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "sqlite", "macros"] }
eyre = "0.6.11"
log = "0.4.20"
env_logger = "0.10.1"
config = "0.13.4"

[dev-dependencies]
cargo-watch = "8.4.0"
